@@ -1,1 +1,1 @@
-* Password  and read function callbacks are not supported
+* Read function callbacks are not supported
